java 18 incompatibilities fix